--- a/index.html
+++ b/index.html
@@ -5,29 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Base Apparel coming soon page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <main class="wrapper">
+    <div class="m-logo"><img src="./images/logo.svg" alt="Base Apparel logo"></div>
+    <picture class="soon-img-box">
+      <source media="(min-width:60rem)" srcset="./images/hero-desktop.jpg">
+      <img src="./images/hero-mobile.jpg" alt="girl wears coral shirt" class="soon-img">
+    </picture>
+    <div class="soon">
+      <div class="logo"><img src="./images/logo.svg" alt="Base Apparel logo"></div>
+      <div class="soon-content">
+        <h1 class="soon-heading"><span>We're</span><br/>coming<br/>soon</h1>
+        <p class="soon-text">Hello fellow shoppers! We're currently building our new fashion store. 
+    Add your email below to stay up-to-date with announcements and our launch deals.</p>
+        <div class="form">
+          <input type="email" name="email" id="email" placeholder="Email Address" onkeydown="test(event)">
+          <button class="btn-submit" onclick="validateEmail()"><img src="./images/icon-arrow.svg" alt="icon arrow" class="icon-arrow"></button>
+          <img src="./images/icon-error.svg" class="icon-err">
+        </div>
+        <div class="error-email">Please provide a valid email</div>
+      </div>     
+    </div>
+  </main>
 
-  We're coming soon
-
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
-
-  Email Address
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+  <script src="script.js"></script>
 </body>
 </html>
